--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,11 +30,14 @@ dependencies:
   flutter:
     sdk: flutter
 
-  #State manager ｜ Navigation manager ｜ Dependencies manager
+  # State manager ｜ Navigation manager ｜ Dependencies manager
   get: ^4.6.5
 
-  #HTTP client
+  # HTTP client
   dio: ^4.0.6
+
+  # A flutter library to show images from the internet and keep them in the cache directory.
+  cached_network_image: ^3.1.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
